--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/climb-icon.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Climbing Log</title>
+    <meta name="theme-color" content="#8b5cf6" />
+    <meta name="description" content="Track your bouldering sessions, share progress with friends, and build a climbing community" />
+    <title>Boolder - Climbing Log</title>
   </head>
   <body>
     <div id="root"></div>
